feat: implemented wordCounter and letterCounter

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
   </head>
   <body>
+    <main>
+      <section>
+        <div>
+          <textarea name="" id="textInput" cols="30" rows="5" contenteditable></textarea>
+          <button id="count">Count</button>
+        </div>
+      </section>
+      <section>
+        <div id="results"></div>
+      </section>
+    </main>
     <script src="./bundle.js"></script>
   </body>
 </html>
